重改整个项目策略逻辑,以币coin大佬的持仓倍数和张数,进行底层计算,实时跟随持仓大佬数据,不论自己本金多少,但是建议最少为1000U

--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,23 @@
             <artifactId>commons-collections</artifactId>
             <version>3.2.2</version>
         </dependency>
+
+        <!-- 使用jasper引擎解析jsp -->
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!-- jsp标签库 -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+        </dependency>
+        <!-- 模板引擎依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -144,6 +161,8 @@
                 <includes>
                     <include>application.yml</include>
                     <include>**/*.xml</include>
+                    <include>**/*.html</include>
+                    <include>**/*.js</include>
                 </includes>
             </resource>
         </resources>
