--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,18 @@
 spring:
   datasource:
-    url: jdbc:mysql://101.132.157.222:3306/coin?characterEncoding=utf8&autoReconnect=true&useSSL=false&serverTimezone=GMT%2B8&allowMultiQueries=true
+    url: jdbc:mysql://124.71.141.149:3306/follow_coin?characterEncoding=utf8&autoReconnect=true&useSSL=false&serverTimezone=GMT%2B8&allowMultiQueries=true
     username: root
-    password: root
-
+    password: root@123
+  thymeleaf:
+    prefix: classpath:/templates/
+    check-template-location: true
+    cache: false
+    suffix: .html
+    mode: HTML5
+server:
+  servlet:
+    context-path: /follow
+  port: 8090
 mybatis:
   type-aliases-package: com.monkey.follow.model
   mapper-locations: classpath*:mapper/*.xml
@@ -13,11 +22,3 @@ mybatis:
 logging:
   file:
     name: system.log
-
-server:
-  servlet:
-    context-path: /follow
-  port: 8090
-
-okex:
-  config: true
